# object-storage-mcp

./: .gitignore  .python-version  Makefile  README.md  dockerfile  env_options.json  mcp_tools.json  pyproject.toml
scripts/: test_s3_connection.py
src/core/: settings.py  validators.py
src/entrypoints/: mcp_instance.py  server.py
src/services/: s3_service.py
src/tools/: delete_file.py  download_file.py  get_file_info.py  list_files.py  upload_file.py
tests/: conftest.py
tests/fixtures/: credentials.py  s3_bucket.py  s3_client.py  s3_service.py  settings.py
tests/services/s3_service/: test_s3_service_delete.py  test_s3_service_download.py  test_s3_service_info.py  test_s3_service_upload.py
tests/validators/: test_validator_bucket_name.py  test_validator_file_extensions.py  test_validator_file_size.py  test_validator_path_safety.py
